force-app/main/default/objects/DisclosureInternalFunding__c/DisclosureInternalFunding__c.object-meta.xml
<CustomObject>
    <label>Disclosure Internal Funding</label>
    <nameField>
        <displayFormat>DIF-{00000000}</displayFormat>
        <label>Disclosure Internal Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosure Internal Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>