force-app/main/default/objects/DisclosureInternalFunding__c/fields/CostObjectKnown__c.field-meta.xml
<CustomField>
    <fullName>CostObjectKnown__c</fullName>
    <label>Cost Object Known</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>