force-app/main/default/objects/DisclosureInternalFunding__c/fields/CostObjectNumber__c.field-meta.xml
<CustomField>
    <fullName>CostObjectNumber__c</fullName>
    <label>Cost Object Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>