force-app/main/default/objects/DisclosureInternalFunding__c/fields/FundingDetails__c.field-meta.xml
<CustomField>
    <fullName>FundingDetails__c</fullName>
    <label>Funding Details</label>
    <type>TextArea</type>
</CustomField>